# linear_algebra_lib

./: .gitignore  CMakeLists.txt  README.md  addition_results.csv  multiplication_results.csv  out.txt
.PVS-Studio/: depend_info.json
benchmarks/: bench_svd.cpp  benchmark.cpp  benchmark_utils.h  benchmarks.ipynb  eigenvalue_benchmark.cpp  sparseMatrix_benchmark.cpp
data/: addition_results.csv  addition_results_s.csv  eigenvalue_benchmark.csv  multiplication_results.csv  multiplication_results_s.csv  sparse_parallel.csv  sparse_serial.csv  sparse_vs_dense_mult.csv
include/: linalg.h  matrix.h  ndmatrix.h  sparseMatrix.h  squareMatrix.h  tensor.h  tenzor.h  thread_pool.h  vector.h
output/: results.csv
src/: main.cpp
tests/: test.cpp  test_main.cpp  test_matrix.cpp  test_sparseMatrix.cpp  test_squareMatrix.cpp  test_tenzor.cpp  test_vector.cpp
